# leanforge

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .pids  AGENTS.md  CLAUDE.md  LEANFORGE.md  MCP_SETUP.md  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: budgets.json
config/models/: leanstral.json  nemotron.json
config/prompts/: orchestrator_system.txt  synthesis_prompt.txt
config/schemas/: proof_task_example.json
infra/: Dockerfile  bootstrap.sh  smoke_test.sh  start_services.sh  stop_services.sh
lean/: ForgeLean.lean  lake-manifest.json  lakefile.toml
lean/ForgeLean/: Basic.lean  Scratch.lean
lean/ForgeLean/Bench/: Algebra.lean  Countability.lean  NumberTheory.lean  Topology.lean
lean/ForgeLean/Examples/: HumanProofs.lean
scripts/: agent_status.py  lean_format.py  search.py  synthesize.py  verify.py
services/: schemas.py
services/agent/: api.py  dashboard.py  db.py  planner.py  runner.py
services/lean_env/: main.py
services/orchestrator/: llm.py  main.py
services/proof_search/: main.py
services/retrieval/: indexer.py  main.py
services/telemetry/: main.py
skills/: benchmark.md  lean-repair.md  lean-retrieve.md  lean-search.md  lean-state.md  lean-verify.md  orchestrator.md  web-search.md
tests/: conftest.py
tests/e2e/: run_benchmarks.py  test_prove_loop.py  test_verification_gate.sh
tests/integration/: test_services.py
tests/unit/: test_lean_env.py  test_proof_search.py  test_retrieval.py  test_schemas.py
